# manga-image-translator-rust-muxue

./: .gitignore  .gitmodules  Cargo.toml  DEVELOPMENT_GUIDE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/actions/cargo/: action.yml
.github/actions/python-build/: action.yml
.github/actions/setup-linux/: action.yml
.github/actions/setup-macos/: action.yml
.github/actions/setup-windows/: action.yml
.github/workflows/: pull.yml  push.yml  release.yml  web.yml
crates/base-util/: Cargo.toml
crates/base-util/src/: error.rs  lib.rs  ndarray_utils.rs  onnx.rs  opencv_utils.rs
crates/interface/colorizer/: Cargo.toml
crates/interface/detector/: Cargo.toml
crates/interface/detector/benches/: textlines_bench.rs
crates/interface/detector/src/: common.rs  lib.rs  mod.rs  textlines.rs
crates/interface/image/: Cargo.toml
crates/interface/image/benches/: border_bench.rs  border_center_bench.rs  gamma_correction_bench.rs  histogram_equalization_bench.rs  invert_bench.rs  remove_border_mask_bench.rs  resize_bench.rs  resize_mask_bench.rs  rotate_bench.rs  rotate_left_mask_bench.rs
crates/interface/image/src/: cpu.rs  dummy.rs  froms.rs  gpu.rs  lib.rs  rayon.rs
crates/interface/inpainter/: Cargo.toml
crates/interface/inpainter/src/: lib.rs
crates/interface/kumiko/: Cargo.toml
crates/interface/kumiko/src/: main.rs  page.rs  panel.rs  segment.rs
crates/interface/model/: Cargo.toml
crates/interface/model/src/: db.rs  lib.rs
crates/interface/ocr/: Cargo.toml
crates/interface/ocr/src/: lib.rs
crates/interface/renderer/: Cargo.toml
crates/interface/renderer/src/: lib.rs
crates/interface/translator/: Cargo.toml  build.rs
crates/interface/translator/src/: lib.rs
crates/interface/upscaler/: Cargo.toml
crates/interface/upscaler/src/: lib.rs
crates/mask-refinement/: Cargo.toml
crates/mask-refinement/src/: bubble.rs  expand.rs  fill_text.rs  lib.rs
crates/modules/detector/ctd/: Cargo.toml
crates/modules/detector/ctd/src/: lib.rs  refine_mask.rs
crates/modules/detector/dbnet/: Cargo.toml
crates/modules/detector/dbnet/benches/: onnx_bench.rs
crates/modules/detector/dbnet/src/: lib.rs  main.rs
crates/modules/detector/none/: Cargo.toml
crates/modules/detector/none/benches/: onnx_bench.rs
crates/modules/detector/none/src/: lib.rs
crates/modules/detector/paddle/: Cargo.toml
crates/modules/detector/paddle/benches/: generate_mask_bench.rs  onnx_bench.rs
crates/modules/detector/paddle/src/: lib.rs
crates/modules/detector/python-module/: Cargo.toml
crates/modules/detector/python-module/src/: lib.rs
crates/modules/inpainter/color/: Cargo.toml
crates/modules/inpainter/color/src/: lib.rs
crates/modules/inpainter/lama_aot/src/: lib.rs
crates/modules/inpainter/lama_large/src/: lib.rs
crates/modules/inpainter/lama_mpe/: Cargo.toml
crates/modules/inpainter/lama_mpe/src/: lib.rs  mpe.rs
crates/modules/ocr/ctc-48px/: Cargo.toml
crates/modules/ocr/ctc-48px/src/: decode.rs  lib.rs
crates/modules/ocr/manga-ocr/: Cargo.toml
crates/modules/ocr/manga-ocr/src/: lib.rs
crates/modules/ocr/native/: Cargo.toml
crates/modules/ocr/native/src/: lib.rs
crates/modules/ocr/ocr-48px/src/: infer.rs  lib.rs
crates/modules/ocr/tesseract/: Cargo.toml
crates/modules/ocr/tesseract/src/: lib.rs
crates/modules/renderer/export/: Cargo.toml
crates/modules/renderer/export/src/: lib.rs
crates/modules/renderer/html/: Cargo.toml
crates/modules/renderer/html/src/: lib.rs
crates/modules/renderer/html/static/: lazyInit.js  script.js  style.css
crates/modules/renderer/png/: Cargo.toml
crates/modules/renderer/png/src/: lib.rs  main.rs  png_session.rs
crates/modules/upscaler/anime4k/: Cargo.toml
crates/modules/upscaler/anime4k/src/: lib.rs
crates/modules/upscaler/esrgan/src/: lib.rs
crates/modules/upscaler/waifu2x/: Cargo.toml
crates/modules/upscaler/waifu2x/src/: lib.rs
crates/modules/watermarks/lsb/src/: lib.rs
crates/py-bindings/: Cargo.toml  pyproject.toml
crates/py-bindings/src/: lib.rs
crates/runtimes/simple-runtime/: Cargo.toml
crates/runtimes/simple-runtime/src/: api.rs  cli.rs  debug.rs  execute.rs  main.rs  settings.rs  update.rs  webview_ui.rs
crates/runtimes/simple-runtime/src/debug/: mod.rs  textblocks.rs
crates/runtimes/simple-runtime/src/execute/: detector.rs  dict.rs  inpainter.rs  mask_refinement.rs  mod.rs  ocr.rs  textline_merge.rs  translator.rs  upscaler.rs
crates/runtimes/simple-runtime/src/settings/: detector.rs  inpainter.rs  mod.rs  ocr.rs  render.rs  translator.rs  upscaler.rs
crates/runtimes/simple-runtime/src/setup/: detector.rs  inpainter.rs  ocr.rs  translator.rs  upscaler.rs
crates/runtimes/simple-runtime/src/ui/: main.rs  mod.rs
crates/runtimes/simple-runtime/src/ui/components/: file_table.rs  file_upload.rs  mod.rs
crates/runtimes/simple-runtime/web/: index.html
crates/runtimes/simple-runtime/webview/: app.js  index.html  styles.css
crates/textline-merge/src/: lib.rs
crates/util/: Cargo.toml
crates/util/benches/: det_arange_bench.rs  imageproc_bench.rs
crates/util/src/: async_helper.rs  average.rs  dbnet.rs  det_arrange.rs  imageproc.rs  lama.rs  lib.rs  nd.rs  ocr.rs  opencv.rs  resize.rs  text_direction.rs
docs/: BINARY_EXPORT_DATA_STRUCURE.md  BUILD.md  INSTALL.md  MODULES.md  ROADMAP.md  USAGE.md  book.toml  example.json  schema.json
docs/src/: installation.md  modules.md  python-renderer.md  usage.md
example/: example.json  schema.json
python/wheels/simple/rusty-manga-image-translator/: index.html
scripts/: flag-clone.sh  flag-to_owned.sh  flag-todo.sh  flag-unwrap.sh  load.py  package-windows-portable.ps1  python-render.py
