[workspace]
resolver = "3"
members = [
    "crates/base-util",
    "crates/interface/*",
    "crates/modules/detector/*",
    "crates/py-bindings",
    "crates/util",
]

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
rayon = "1.10.0"
image = "0.25.6"
log = "0.4.27"
maplit = "1.0.2"
base-util = { path = "crates/base-util" }
anyhow = "1.0.98"
util = { path = "crates/util" }
opencv = { version = "0.95", default-features = false }
fast_image_resize = "5.2"
tokio = "1.47.0"
env_logger = "0.11.8"
ort = { version = "2.0.0-rc.10" }
ndarray = "0.16.1"
tiny-skia = "0.11.4"
geo = "0.30.0"
dbnet = { path = "crates/modules/detector/dbnet" }
paddle = { path = "crates/modules/detector/paddle" }
none = { path = "crates/modules/detector/none" }
ureq = "3.0.12"
tempfile = "3.20.0"
flate2 = "1.1.2"
tar = "0.4.44"
sha2 = "0.10.9"
ndarray-npy = "0.9.1"
ndarray-linalg = { version = "0.17.0" }
interface-model = { path = "crates/interface/model" }
interface-inpainter = { path = "crates/interface/inpainter" }
interface-image = { path = "crates/interface/image" }
interface-detector = { path = "crates/interface/detector" }
interface-ocr = { path = "crates/interface/ocr" }
show-image = "0.13"
thiserror = "2.0.12"
parking_lot = "0.12.4"
once_cell = "1.21.3"
rand = "0.9"
roots = "0.0.8"
petgraph = "0.8.2"
itertools = "0.14.0"
imageproc = "0.25.0"
indicatif = { version = "0.18.0" }
approx = "0.5.1"
criterion = "0.6.0"

[patch.crates-io]
clipper2c-sys = { git = "https://github.com/tirithen/clipper2c-sys" }
clipper2 = { git = "https://github.com/frederik-uni/clipper2", branch = "offset" }
