[workspace]
resolver = "3"
members = [
    "crates/base-util",
    "crates/densecrf",
    "crates/interface/*",
    "crates/kumiko",
    "crates/mask-refinement",
    "crates/modules/detector/*",
    "crates/modules/inpainter/*",
    "crates/modules/ocr/*",
    "crates/modules/renderer/*",
    "crates/modules/upscaler/*",
    "crates/modules/watermarks/lsb",
    "crates/modules/watermarks/rexiv",
    "crates/py-bindings",
    "crates/runtimes/simple-runtime",
    "crates/textline-merge",
    "crates/util",
]

[workspace.package]
version = "0.8.12"
edition = "2021"

[workspace.dependencies]
rayon = "1.11"
image = "0.25.6"
log = "0.4.27"
maplit = "1.0.2"
base-util = { path = "crates/base-util" }
anyhow = "1.0"
util = { path = "crates/util" }
opencv = { version = "0.95", default-features = false }
fast_image_resize = "5.2"
tokio = "1.47"
env_logger = "0.11.8"
ort = { version = "2.0.0-rc.10" }
ndarray = "0.16.1"
tiny-skia = "0.11.4"
geo = "0.30.0"
dbnet = { path = "crates/modules/detector/dbnet" }
ctd = { path = "crates/modules/detector/ctd" }
paddle = { path = "crates/modules/detector/paddle" }
textline-merge = { path = "crates/textline-merge" }
ureq = "3.1"
tempfile = "3.20.0"
flate2 = "1.1.2"
tar = "0.4.44"
sha2 = "0.10.9"
ndarray-npy = "0.9.1"
ndarray-linalg = { version = "0.17.0" }
interface-model = { path = "crates/interface/model" }
interface-inpainter = { path = "crates/interface/inpainter" }
interface-image = { path = "crates/interface/image" }
interface-detector = { path = "crates/interface/detector" }
interface-ocr = { path = "crates/interface/ocr" }
interface-upscaler = { path = "crates/interface/upscaler" }
interface-translator = { path = "crates/interface/translator" }
waifu2x = { path = "crates/modules/upscaler/waifu2x" }
anime4k = { path = "crates/modules/upscaler/anime4k" }
esrgan = { path = "crates/modules/upscaler/esrgan" }
lama_aot = { path = "crates/modules/inpainter/lama_aot" }
lama_large = { path = "crates/modules/inpainter/lama_large" }
lama_mpe = { path = "crates/modules/inpainter/lama_mpe" }
manga-ocr = { path = "crates/modules/ocr/manga-ocr" }
mask-refinement = { path = "crates/mask-refinement" }
show-image = "0.13"
thiserror = "2.0"
parking_lot = "0.12.4"
once_cell = "1.21.3"
rand = "0.9"
roots = "0.0.8"
petgraph = "0.8.2"
itertools = "0.14.0"
imageproc = "0.25.0"
indicatif = { version = "0.18.0" }
approx = "0.5.1"
criterion = "0.6.0"
half = "2.6.0"
clap = "4.5"
walkdir = "2.5.0"
config = { version = "0.15" }
serde = "1.0.219"
ab_glyph = "0.2.31"
ordered-float = { version = "5" }
serde_json = "1.0.142"
regex = "1.11.1"
cosmic-text = "0.14.2"
uni-ocr = "0.1.5"
async-trait = "0.1.89"
pyo3 = "0.25.1"

[patch.crates-io]
clipper2c-sys = { git = "https://github.com/tirithen/clipper2c-sys" }
clipper2 = { git = "https://github.com/frederik-uni/clipper2", branch = "offset" }
