[package]
name = "base-util"
version.workspace = true
edition.workspace = true

[dependencies]
ort = { workspace = true, optional = true }
ndarray.workspace = true
anyhow.workspace = true
thiserror.workspace = true
opencv = { workspace = true, optional = true }
ureq.workspace = true

[features]
default = []
onnx = ["dep:ort"]
opencv = ["dep:opencv"]
