[package]
name = "base-util"
version.workspace = true
edition.workspace = true

[dependencies]
ort = { workspace = true, optional = true, features = [
    "cuda",
    "coreml",
    "tensorrt",
    "rocm",
] }
ndarray.workspace = true
anyhow.workspace = true
thiserror.workspace = true
opencv = { workspace = true, optional = true, features = ["clang-runtime"] }
ureq.workspace = true
log.workspace = true

[features]
default = []
onnx = ["dep:ort"]
opencv = ["dep:opencv"]
