[package]
name = "mask-refinement"
version.workspace = true
edition.workspace = true

[dependencies]
base-util.workspace = true
textline-merge.workspace = true
interface-image.workspace = true
interface-detector.workspace = true
opencv = { workspace = true, features = ["imgproc"] }
ndarray.workspace = true
geo.workspace = true
ordered-float.workspace = true
densecrf.workspace = true
argminmax = { workspace = true, default-features = false, features = [
    "ndarray",
    "float",
] }
anyhow.workspace = true
[dev-dependencies]
ndarray-npy.workspace = true
