[package]
name = "rusty-manga-image-translator"
version.workspace = true
edition.workspace = true

[dependencies]
interface-model.workspace = true
interface-detector.workspace = true
interface-image.workspace = true
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py39"] }
numpy = "0.25.0"
dbnet.workspace = true
base-util.workspace = true
parking_lot = "0.12"
paddle.workspace = true
ctd.workspace = true
textline-merge.workspace = true
interface-translator.workspace = true
interface-ocr.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow.workspace = true
ort.workspace = true

[lib]
name = "rusty_manga_image_translator"
crate-type = ["cdylib"]

[features]
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
tensorrt = ["ort/tensorrt"]
rocm = ["ort/rocm"]
