[project]
name = "rusty-manga-image-translator"
version = "0.4.3"
description = "Rust implementation of manga-image-translator with py-bindings"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Frederik", email = "termite_pilgrim04@icloud.com" }]
keywords = ["manga", "image-processing", "rust", "python", "translator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>1",
]

[project.urls]
Homepage = "https://github.com/frederik-uni/manga-image-translator-rust"
Repository = "https://github.com/frederik-uni/manga-image-translator-rust"
Issues = "https://github.com/frederik-uni/manga-image-translator-rust/issues"
Changelog = "https://github.com/frederik-uni/manga-image-translator-rust/blob/master/CHANGELOG.md"

[tool.maturin]
module-name = "rusty_manga_image_translator"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
