[package]
name = "util"
version.workspace = true
edition.workspace = true

[dependencies]
ndarray-npy = { workspace = true }
opencv = { workspace = true, default-features = false, features = [
    "imgproc",
    "clang-runtime",
    "calib3d",
] }
petgraph.workspace = true
itertools.workspace = true
interface-image.workspace = true
interface-detector.workspace = true
anyhow.workspace = true
fast_image_resize.workspace = true
clipper2c-sys = "0.1.5"
log.workspace = true
clipper2 = "0.5.3"
ndarray = { workspace = true, features = ["rayon"] }
ort = { workspace = true, features = [
    "ndarray",
    "download-binaries",
    "cuda",
    "coreml",
] }
ndarray-linalg = { workspace = true, features = ["intel-mkl-static"] }
rayon.workspace = true
base-util = { workspace = true, features = ["onnx", "opencv"] }
image.workspace = true
parking_lot.workspace = true

[dev-dependencies]
criterion = "0.6.0"
once_cell = "1.21.3"

[[bench]]
name = "imageproc_bench"
harness = false

[[bench]]
name = "det_arange_bench"
harness = false
