[package]
name = "interface-detector"
version.workspace = true
edition.workspace = true

[dependencies]
base-util.workspace = true
log.workspace = true
geo.workspace = true
anyhow.workspace = true
interface-image.workspace = true
interface-model.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[[bench]]
name = "textlines_bench"
harness = false
