[package]
name = "simple-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "color"] }
walkdir.workspace = true
config = { workspace = true, features = [
    "json",
    "json5",
    "ini",
    "ron",
    "toml",
    "yaml",
] }
serde = { workspace = true, features = ["derive"] }

interface-detector.workspace = true
interface-upscaler.workspace = true
interface-inpainter.workspace = true
interface-image.workspace = true
interface-ocr.workspace = true
interface-translator.workspace = true
log.workspace = true
strum = "0.27.2"
strum_macros = "0.27.2"
base-util.workspace = true
waifu2x.workspace = true
esrgan.workspace = true
anime4k.workspace = true
dbnet.workspace = true
ctd.workspace = true
paddle.workspace = true
lama_aot.workspace = true
lama_large.workspace = true
lama_mpe.workspace = true
manga-ocr.workspace = true
image.workspace = true
textline-merge.workspace = true
imageproc.workspace = true
ab_glyph.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
env_logger.workspace = true

# ui
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
rfd = "0.15.4"

[profile.dev.package."*"]
opt-level = 2
