[package]
name = "dbnet"
version.workspace = true
edition.workspace = true

[dependencies]
opencv = { workspace = true, default-features = false, features = [
    "imgproc",
    "clang-runtime",
] }
interface-model.workspace = true
interface-detector.workspace = true
interface-image.workspace = true
log.workspace = true
anyhow.workspace = true
maplit.workspace = true
util.workspace = true
ort.workspace = true
base-util.workspace = true
ndarray-npy = "0.9.1"
ndarray.workspace = true
ordered-float = "5.0.0"
env_logger.workspace = true
ndarray-linalg = { workspace = true, features = ["intel-mkl-static"] }

[dev-dependencies]
criterion = "0.6.0"


[[bench]]
name = "onnx_bench"
harness = false
