[package]
name = "none"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
interface-model.workspace = true
interface-detector.workspace = true
anyhow.workspace = true
base-util.workspace = true
interface-image.workspace = true

[dev-dependencies]
criterion = "0.6.0"


[[bench]]
name = "onnx_bench"
harness = false
