[package]
name = "manga-ocr"
version.workspace = true
edition.workspace = true

[dependencies]
interface-model.workspace = true
interface-ocr.workspace = true
interface-detector.workspace = true
interface-image.workspace = true
ndarray.workspace = true
ort.workspace = true
base-util.workspace = true
anyhow.workspace = true
maplit.workspace = true
image.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
parking_lot.workspace = true
util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
