[package]
name = "native"
version.workspace = true
edition.workspace = true

[dependencies]
uni-ocr.workspace = true
interface-model.workspace = true
interface-ocr.workspace = true
interface-detector.workspace = true
interface-image.workspace = true
image.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow.workspace = true
base-util.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
