[package]
name = "html"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
export.workspace = true
image.workspace = true
v_htmlescape.workspace = true
base64.workspace = true
interface-image.workspace = true
serde_json.workspace = true
anyhow.workspace = true
